# esp32-rust-test

./: Cargo.toml
.cargo/: config.toml
src/: main.rs  peripherals.rs
